--- a/CloudService/CloudService/Base.lproj/Main.storyboard
+++ b/CloudService/CloudService/Base.lproj/Main.storyboard
@@ -825,6 +825,9 @@
                                                     <constraint firstAttribute="height" constant="30" id="DD1-Sq-Tki"/>
                                                 </constraints>
                                                 <state key="normal" title="签到"/>
+                                                <connections>
+                                                    <action selector="my:" destination="jcF-5w-02F" eventType="touchUpInside" id="XUP-8q-8iP"/>
+                                                </connections>
                                             </button>
                                         </subviews>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -936,7 +939,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="uQW-HY-y8x" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1249.5" y="-1043.5"/>
+            <point key="canvasLocation" x="1281.5" y="-1599.5"/>
         </scene>
         <!--订单管理-->
         <scene sceneID="En5-ls-5mo">
@@ -1113,7 +1116,40 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="5iS-I2-iuC" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1830.5" y="-507.5"/>
+            <point key="canvasLocation" x="1932.5" y="-517.5"/>
+        </scene>
+        <!--我的客户-->
+        <scene sceneID="cw4-cx-GMB">
+            <objects>
+                <viewController title="我的客户" id="Pp4-nm-jZd" customClass="MyClientViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="ITv-0D-E2s"/>
+                        <viewControllerLayoutGuide type="bottom" id="cmw-7s-PYS"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="xxq-AO-HD1">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <searchBar contentMode="redraw" fixedFrame="YES" placeholder="请输入关键词进行搜索" showsCancelButton="YES" translatesAutoresizingMaskIntoConstraints="NO" id="35M-mE-y8y">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </searchBar>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="8V5-JM-VpR">
+                                <rect key="frame" x="0.0" y="44" width="375" height="559"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="tUt-Qw-OdF"/>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
+                    <connections>
+                        <segue destination="azA-T9-zXt" kind="push" identifier="creatClient" id="ZgM-Ik-4vH"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Z5H-dG-SrB" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1845.5" y="-1118.5"/>
         </scene>
         <!--个人中心-->
         <scene sceneID="kog-Di-h4W">
@@ -1499,17 +1535,51 @@
                                 </userDefinedRuntimeAttributes>
                                 <connections>
                                     <action selector="save:" destination="T6I-5O-g6L" eventType="touchUpInside" id="4Ar-32-JEF"/>
+                                    <segue destination="RT6-86-P7R" kind="push" id="nMs-kY-evH"/>
                                 </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" red="0.95686274510000002" green="0.95686274510000002" blue="0.95686274510000002" alpha="1" colorSpace="calibratedRGB"/>
                     </view>
-                    <navigationItem key="navigationItem" title="创建订单" id="AA9-Z5-t5w"/>
+                    <navigationItem key="navigationItem" title="创建客户" id="AA9-Z5-t5w"/>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="SAN-tt-IbJ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1703.5" y="-1247.5"/>
+            <point key="canvasLocation" x="2329.5" y="-1874.5"/>
+        </scene>
+        <!--立即报价-->
+        <scene sceneID="iak-uT-QYf">
+            <objects>
+                <viewController title="立即报价" id="RT6-86-P7R" customClass="OfferViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="DNE-KM-hLq"/>
+                        <viewControllerLayoutGuide type="bottom" id="HIl-jL-MCg"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="aTg-UI-xCC">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" style="grouped" separatorStyle="default" allowsSelection="NO" rowHeight="44" sectionHeaderHeight="18" sectionFooterHeight="18" translatesAutoresizingMaskIntoConstraints="NO" id="Iug-ao-o50">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="603"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <connections>
+                                    <outlet property="dataSource" destination="RT6-86-P7R" id="GaX-d0-rU8"/>
+                                    <outlet property="delegate" destination="RT6-86-P7R" id="fZ0-WP-3rD"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="AAC-bF-6F5"/>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
+                    <connections>
+                        <outlet property="tableView" destination="Iug-ao-o50" id="nYf-An-qjC"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="YMY-0K-Qh4" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2891" y="-1887"/>
         </scene>
     </scenes>
     <resources>
